--- a/index.html
+++ b/index.html
@@ -1,74 +1,128 @@
 <!DOCTYPE html>
-    <html lang="pt-br">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Descrição do Projeto</title>
-        <link rel="stylesheet" href="styles/style.css">
-    </head>
+<html lang="pt-br">
 
-    <body>
-        <header>
-            <h1>Descrição do Projeto Temático</h1>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Descrição do Projeto</title>
+    <link rel="stylesheet" href="styles/style.css">
+</head>
+
+<body>
+    <header>
+        <div class="second-header">
+            <h1>Chroma<span>tiz</span></h1>
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="funcionalidades.html">Funcionalidades</a></li>
                     <li><a href="prazos.html">Cronograma</a></li>
-                    <li><a href="validacao.html">Validação</a></li>
                 </ul>
             </nav>
-            <hr>
-        </header>
+        </div>
 
-        <main>  
-            <h1>Introdução</h1>
-            <p>
-                O tema principal escolhido para o projeto foi <strong>Design</strong>, o projeto se trata de um site/web app com ferramentas que montem paletas de cores personalizadas com base nos fundamentos do círculo cromático. O objetivo do site é auxiliar desenvolvedores/designers a montar paleta de cores para os seus projetos, com ferramentas que além de permitir o usuário construir uma paleta harmônica, também permita pré-visualizar uma simulação de como ela será aplicada em uma interface de exemplo.
-            </p> 
-            
-            <div id="imgs">
-                <figure>
-                    <picture>
-                        <source media="(max-width: 1277px)" srcset="imgs/img1-p.png">
-                        <img src="imgs/img1.png" alt="Imagem demonstrando a estrutura do projeto">
-                    </picture>
-                    <figcaption>Exemplo da estrutura do projeto </figcaption>
-                </figure>
-                <figure>
-                    <picture>
-                        <source media="(max-width: 1277px)" srcset="imgs/img2-p.png">
-                        <img src="imgs/img2.png" alt="Imagem demonstrando uma ferramenta que simula a aplicação da paleta">
-                    </picture>
-                    <figcaption>Ferramenta de simulação com paleta aplicada</figcaption>
-                </figure>
+        <h1 class="site-title">Chromatiz</h1>
+
+        <div class="cta-container">
+            <h1 class="big-text">Crie paletas de cores para seus sites de forma prática.</h1>
+
+            <div class="cta">
+                <p>É webdesigner ou desenvolvedor e deseja usar a ferramenta para montar suas paletas de cores?</p>
+                <div class="button">
+                    <a href="#">Experimente</a>
+                </div>
             </div>
+        </div>
 
-            <h2>Inspirações do projeto:</h2>
-            <ul>
-                <li><a href="https://paletton.com/#uid=15p0u0kmGkB00Q+bRuSzja-++00">Palleton</a> (Atualmente não está funcionando totalmente)</li>
-                <li><a href="https://color.adobe.com/pt/create/color-wheel">Adobe Color</a></li>
-            </ul>
+        <div id="imgs">
+            <picture>
+                <source media="(max-width: 768px)" srcset="imgs/img1-p.png">
+                <img src="imgs/img1.png" alt="Imagem demonstrando a estrutura do projeto">
+            </picture>
+        </div>
+    </header>
 
-            <h1>Justificativa</h1>
-            <p>
-                Há poucas ferramentas de design com montagem de paletas que auxiliem especificamente os desenvolvedores web, as poucas que existem(como o Paletton anteriormente citado) não estão 100% funcionais, não são acessíveis para a maioria dos dipositivos e não são acessíveis para vários idiomas. O projeto a ser desenvolvido nessa disciplina é uma boa solução para essa situação e poderá atingir um público muito amplo de desenvolvedores de diversas plataformas, com os desenvolvedores web incluidos.
-            </p>
+    <main>
+        <section class="introducao">
+            <h1 class="big-text">O que é chromatiz?</h1>
+            <div class="content">
+                <p>
+                    O tema principal escolhido para o projeto foi <strong>Design</strong>, chromatiz se trata de um
+                    site/web app
+                    com ferramentas que montem paletas de cores personalizadas com base nos fundamentos do círculo
+                    cromático. O
+                    objetivo do site é auxiliar desenvolvedores/web designers a montar paleta de cores para os seus
+                    projetos, com
+                    ferramentas que além de permitir o usuário construir uma paleta harmônica, também permita
+                    pré-visualizar uma
+                    simulação de como ela será aplicada em uma interface de exemplo.
+                </p>
+            </div>
+        </section>
 
-            <h1>Objetivos</h1>
-            <ul>
-                <li>Site responsivo que se adapte a vários dispositivos</li>
-                <li>Criação de contas para o usuário salvar suas paletas personalizadas</li>
-                <li>Círculo cromático interativo</li>
-                <li>Paletas disponibilizadas em código rgb, hsl e hexadecimal</li>
-                <li>Ferramentas de simulação com sites de exemplo utilizando a paleta selecionada</li>
-            </ul>
-        </main>
+        <section class="justificativa">
+            <h1 class="big-text">Por que chromatiz foi criado?</h1>
+            <div class="content">
+                <p>
+                    Há poucas ferramentas de design com montagem de paletas que auxiliem especificamente os
+                    desenvolvedores web,
+                    as poucas que existem(como o Paletton anteriormente citado) não estão 100% funcionais, não são
+                    acessíveis
+                    para a maioria dos dipositivos e não são acessíveis para vários idiomas. O projeto a ser
+                    desenvolvido nessa
+                    disciplina é uma boa solução para essa situação e poderá atingir um público muito amplo de
+                    desenvolvedores
+                    de diversas plataformas, com os desenvolvedores web incluidos.
+                </p>
+            </div>
+        </section>
 
-        <footer>
-            <hr>
-            <p>&copy; Luiz Gabriel - IFCE - 2022</p>
-        </footer>
-    </body>
+        <section class="objetivos">
+            <h1 class="big-text">Objetivos e Funcionalidades</h1>
+
+            <div class="content">
+                <h2>Circulo Cromático Interativo</h2>
+                <div class="func">
+                    <div class="func-desc">
+                        <p>Circulo cromático que permite construir paletas baseada na teoria da harmonia das cores de
+                            forma automática.</p>
+                    </div>
+                    <img src="imgs/palletes2.svg" alt="Mulher selecionando cores">
+                </div>
+
+                <h2>Paletas Personalizadas</h2>
+                <div class="func">
+                    <div class="func-desc">
+                        <p>O usuário poderá criar uma conta e salvar/gerenciar suas próprias paletas, que serão
+                            disponibilizadas em Cod. Hexadecimal, RGB, HSL.</p>
+                    </div>
+                    <img src="imgs/palletes.svg" alt="Homem gerenciando uma paleta de cores">
+                </div>
+
+                <h2>Pré-visualização das paletas</h2>
+                <div class="func">
+                    <div class="func-desc">
+                        <p>O site disponibilizará um preview com sua paleta personalizada aplicada em uma interface de
+                            exemplo.</p>
+                    </div>
+                    <img src="imgs/addcolor.svg" alt="Mulher aplicando cor em um site">
+                </div>
+            </div>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; Luiz Gabriel - IFCE - 2022</p>
+        <a download="htmlval" href="downloads/htmlval.pdf" type="application/pdf">Validação HTML</a>
+        <a download="cssval" href="downloads/cssval.pdf" type="application/pdf">Validação CSS</a>
+    </footer>
+
+    <script type="text/javascript">
+        window.addEventListener("scroll", function () {
+            var header = document.querySelector(".second-header")
+            header.classList.toggle("sticky", window.scrollY > 0)
+        })
+    </script>
+</body>
+
 </html>
