ajustes no header e botão css

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
             <h1 class="big-text">Crie paletas de cores para seus sites de forma prática.</h1>
 
             <div class="cta">
-                <p>É webdesigner ou desenvolvedor e deseja usar a ferramenta para montar suas paletas de cores?</p>
+                <p>É webdesigner ou desenvolvedor e deseja usar a ferramenta para montar paletas de cores para seus projetos?</p>
                 <div class="button">
-                    <a href="#">Experimente</a>
+                    <a href="#">Experimente!</a>
                 </div>
             </div>
         </div>
